Added insomnia plugin buttons for debug

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -213,6 +213,18 @@
 				Set
 			</button>
 		</ion-item>
+		<ion-item class="item item-button-right" >
+			Keep awake
+			<button class="button button-positive" ng-click="keepAwake()">
+				Keep awake
+			</button>
+		</ion-item>
+		<ion-item class="item item-button-right" >
+			Allow sleeping
+			<button class="button button-positive" ng-click="allowSleepAgain()">
+				Allow sleeping
+			</button>
+		</ion-item>
 	</span>
 
 	<div class="item item-divider">
